test/spec_vectors/f32/fail/module_5.wat
(module (func (result f32) (f32.mul (i64.const 0) (f64.const 0))))